syntax = "proto3";

option go_package = "generated/telegram-api";

service TgBotModuleService {
  rpc HandleUpdate (UpdateRequest) returns (UpdateResponse);
}

message UpdateRequest {
  string update_json = 1;
}

// Ответ от модуля бота
message UpdateResponse {
  bool success = 1;
  string message = 2;
}